[package]
name = "gltf-viewer"
version = "0.4.2-alpha.0"
authors = ["Benjamin Wasty <benny.wasty@gmail.com>"]
edition = "2018"
categories = ["rendering"]
description = "Simple glTF 2.0 viewer"
include = [
    "Cargo.toml",
    "Cargo.lock", # Note: currently ignored by `cargo package`, see rust-lang/cargo#2263
    "**/*.rs",
    "src/shaders/*.*",
]
keywords = ["glTF", "3D", "model", "scene", "viewer"]
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/bwasty/gltf-viewer"
build = false # TODO: git-version doesn't work on Travis

[badges]
maintenance = { status = "passively-maintained" }

[badges.travis-ci]
branch = "master"
repository = "bwasty/gltf-viewer"

[dependencies]
base64 = "0.11.0"
bitflags = "1.2.1"
cgmath = "0.17.0"
clap = "2.33.0"
collision = "0.20.1"
# futures = "0.1.14"
# futures-cpupool = "0.1.5"
gl = "0.14.0"
glutin = "0.18.0"
image = "0.21.0"
# reqwest = "0.7.3"
log = "0.4.8"
num-traits = "0.2.11"
simplelog = "0.7.4"
# itertools = "0.6.3"

[dependencies.gltf]
version = "0.15.0"
features = ["names"]

# [dependencies.mikktspace]
# git = "https://github.com/gltf-rs/mikktspace"

[build-dependencies]
git-version = "0.2.1"

# [profile.dev]
# opt-level = 2
# debug = false

# [profile.release]
# opt-level = 3
# lto = true
